# skill-boost-consuming-apis

./: .env.template  .gitignore  Makefile  README.md  main.py  main_async_measurements.py  main_asyncio.py  main_multithreaded_measurements.py  main_multithreading.py  main_sync.py  pyproject.toml
api/: Dockerfile  README.md  main.py  pyproject.toml
infra/: .terraform.lock.hcl  dns.tf  ecs.tf  iam.tf  lb.tf  network.tf  provider.tf
src/skill_boost_consuming_apis/: __init__.py  main_async_measurements.py  main_multithreaded_measurements.py  main_sync.py
tests/: test_benchmark.py  test_benchmark_sync.py  test_very_reliable.py
