[project]
name = "skill-boost-consuming-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Vanbuel", email = "jan.vanbuel@ond.vlaanderen.be" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.12",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
]

[project.scripts]
skill-boost-consuming-apis = "skill_boost_consuming_apis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
]
